...
    <string name="input">Input</string>
    <string name="mode">Mode</string>
    <string name="definition">Definition</string>
    <string name="regression">regression</string>
    <string name="sum">Sum</string>
    <string name="mac">MAC address</string>
    <string name="ip">IP address</string>
    <string name="wake">Wake</string>
    <string name="isRunning">Is Running?</string>
    <string name="shutdown">Shutdown</string>
    <string name="stateAppendix">Set %1$s to</string>
    <string name="requestRefresh">Request refresh</string>
    <string name="delta">Delta</string>
...
    <string name="hiddenRooms">Hidden rooms</string>
    <string name="hiddenGroups">Hidden groups</string>
    <string name="sortRooms">Room sort</string>
    <string name="pwm0">PWM0</string>
    <string name="pwm1">PWM1</string>
    <string name="wrongPassword">Invalid password!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fatFreeMass">Mass fatfree</string>
    <string name="fatMass">Mass fat</string>
    <string name="fatRatio">Ratio fat</string>
    <string name="heartPulse">Pulse</string>
    <string name="height">Height</string>
...
    <string name="video_size">Video size</string>
    <string name="lock">Lock</string>

    <string name="connectionManageTitle">Connections</string>
    <string name="connectionManage">Manage\u2026</string>
    <string name="connectionCreate">Create a new connection</string>
    <string name="connectionName">Name</string>
    <string name="connectionType">Type</string>
    <string name="connectionUsername">Username</string>
    <string name="connectionUsernameDesc">(optional)</string>
    <string name="connectionPassword">Password</string>
    <string name="connectionPasswordDesc">(optional)</string>
    <string name="connectionShowPassword">Show</string>
    <string name="connectionURL">URL</string>
...
    <string name="connectionAlternateUrlPlaceholder">i.e. http://example.dyndns.com:8083/fhem</string>
    <string name="connectionAlternateUrlDesc">If the app cannot establish a connection to the primary URL it will attempt to connect to the secondary URL. This is required for routers not capable of routing external requests back into its own network.</string>
    <string name="connectionIP">IP</string>
    <string name="connectionIPDesc">i.e. 192.168.0.1</string>
    <string name="connectionPort">Port</string>
    <string name="connectionPortDesc">i.e. 7072</string>
    <string name="connectionEmptyError">Field \"%s\" may not be empty!</string>
    <string name="connectionUrlHttp">URL must start with "http"!</string>
    <string name="connectionCurrent">Current connection</string>
    <string name="connectionClientCertificate">Client certificate</string>
    <string name="connectionClientCertificateDesc">(optional)</string>
    <string name="connectionClientCertificatePassword">Client Certificate password</string>
    <string name="connectionClientCertificatePasswordDesc">(optional)</string>

...
    <string name="retry">Retry</string>
    <string name="incompleteConfigurationError">Incomplete configuration!</string>
    <string name="invalidInput">Invalid input!</string>

    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>

    <string name="doneTitle">Done!</string>
    <string name="switchDelayNotification">The configuration was saved. However, it can take a while until it will show up within the device.</string>

    <string name="startDate">Start Date</string>
...
