...
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dummy_text"
        android:textStyle="bold"
        android:id="@+id/emptyText"/>
</RelativeLayout>
