...
            android:orientation="vertical"
            android:visibility="gone" />

        <ListView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:id="@+id/connectionList"
            style="@style/listView" />

    </FrameLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
...
