...
        android:layout_height="wrap_content"
        android:layout_below="@id/ip"
        android:text="@string/connectionPort"
        style="@style/formLabel"/>

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/portLabel"
        android:inputType="number"
        android:hint="@string/connectionPortDesc"
        style="@style/formInput"/>
...
    <EditText
        android:id="@+id/password"
        android:layout_below="@id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_toLeftOf="@+id/showPasswordCheckbox"
        android:layout_toStartOf="@+id/showPasswordCheckbox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/connectionPasswordDesc"
        style="@style/formInput"/>

...
